--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <html>
   <body>
-    <p>Hi, my name is Pasquale.</p>
-
-<p>I run a business called Digital Handyman LLC and would like the opportunity to handle whatever technology-related project that you have.  I am well-versed in most things from hardware to software and am capable of learning anything new that might be needed.  I have decades of experience with programming, building/repairing electronics (including PCs) and networking.  </p>
-
-<p>Feel free to email me at pranalli@gmail.com or call/text to (412) 498-6701.  I am primarily based out of the northern New Jersey region, but am able to travel and/or do much work remoately.  </p>
-</body
+    <p>Hi, my name is Pasquale</p>
 </html>
