--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
   <body>
-    <p>Hi, my name is Pasquale</p>
+    <div style="width: 30%"></div>
+    <div style="width: 30%><p>Hi, my name is Pasquale</p></div>
+  </body>
 </html>
