--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <div style="width: 30%"></div>
-    <div style="width: 30%><p>Hi, my name is Pasquale</p></div>
+    <div style="fixed-width: 30%"></div>
+    <div style="fixed-width: 30%><p>Hi, my name is Pasquale</p></div>
   </body>
 </html>
