--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <div style="width: 30%; max-width: 30%; display: inline-block"><p>&nbsp;</p></div>
-    <div><p>Hi, my name is Pasquale</p></div>
+    <div style="display: inline-block"><p>Hi, my name is Pasquale</p></div>
   </body>
 </html>
